--- a/projects/project2/index.html
+++ b/projects/project2/index.html
@@ -12,8 +12,7 @@
 
     <!-- My script(s) -->
     <script src="js/Ball.js"></script>
-    <script src="js/VPaddle.js"></script>
-    <script src="js/HPaddle.js"></script>
+    <script src="js/Paddle.js"></script>
     <script src="js/script.js"></script>
   </head>
 
