--- a/exercises/exercise7/index.html
+++ b/exercises/exercise7/index.html
@@ -9,9 +9,15 @@
 
     <!-- Library script(s) -->
     <script src="js/libraries/p5.min.js"></script>
+    <script src="js/libraries/p5.geolocation.js"></script>
+    <script src="js/libraries/rita.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/mappa-mundi/dist/mappa.min.js" type="text/javascript"></script> -->
+
 
     <!-- My script(s) -->
     <script src="js/Area.js"></script>
+    <script src="js/Textbox.js"></script>
+    <script src="js/Bee.js"></script>
     <script src="js/script.js"></script>
   </head>
 
