--- a/projects/project3/index.html
+++ b/projects/project3/index.html
@@ -13,7 +13,9 @@
     <script src="js/libraries/rita.min.js"></script>
 
     <!-- My script(s) -->
+    <script src="js/Area.js"></script>
     <script src="js/script.js"></script>
+
   </head>
 
   <body>
