--- a/projects/project3/index.html
+++ b/projects/project3/index.html
@@ -14,6 +14,7 @@
 
     <!-- My script(s) -->
     <script src="js/Area.js"></script>
+    <script src="js/Textbox.js"></script>
     <script src="js/script.js"></script>
 
   </head>
