P3: Import Bee.js as a script in the html file

--- a/projects/project3/index.html
+++ b/projects/project3/index.html
@@ -15,6 +15,7 @@
     <!-- My script(s) -->
     <script src="js/Area.js"></script>
     <script src="js/Textbox.js"></script>
+    <script src="js/Bee.js"></script>
     <script src="js/script.js"></script>
 
   </head>
